<resources>
    <string name="app_name">Wave</string>
    <string name="title_browse">Browse</string>
    <string name="title_library">Library</string>
    <string name="title_profile">Profile</string>
    <string name="login_hint_username">Username</string>
    <string name="login_hint_password">Password</string>
    <string name="login_button_signin">Sign In</string>
    <string name="title_activity_login">Sign in</string>
    <string name="placeholder">Placeholder</string>

    <!-- Strings related to Sign Up -->
    <string name="signup_button">Create An Account</string>
    <string name="signup_register">Register</string>

    <!-- Strings related to Library Fragment -->
    <string name="addPlaylist_library">Add Playlist</string>
    <string name="deletePlaylist_library">Delete Playlist</string>

    <!-- Strings related to Dialog Activity -->
    <string name="addToPlaylist_dialog">Add To Which Playlist</string>

    <!--Strings related to DialogAddPlaylistActivity-->
    <string name="addPlaylisthint_dialogaddplaylist">Name of Playlist to Add</string>
    <string name="cancelAddingPlaylist">Cancel</string>

    <!--Strings related to Play Activity-->
    <string name="playActivity_addToAPlaylist">Add to Playlist</string>
</resources>
