<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="164dp"
        android:layout_height="168dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:src="@drawable/logo" />

    <!--
     URL for logo:

     https://logomakr.com/4ktXgj
     -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="40dp">

        <EditText
            android:id="@+id/text_input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_hint_username"
            android:inputType="text"
            android:layout_marginBottom="20dp"
            android:padding="16dp"/>

        <EditText
            android:id="@+id/text_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_hint_password"
            android:inputType="textPassword"
            android:layout_marginBottom="30dp"
            android:padding="16dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_signIn"
            android:text="@string/login_button_signin"
            android:onClick="signIn"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_signUp"
            android:text="@string/signup_button"
            android:onClick="goToSignUp"/>

    </LinearLayout>

</LinearLayout>