<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/colorBackground"
    tools:context=".SignUpActivity">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back_black_24dp"
        android:layout_gravity="left"
        android:id="@+id/button_back_signup"
        android:background="@color/colorWhite"
        android:padding="5dp"/>

    <ImageView
        android:layout_width="164dp"
        android:layout_height="168dp"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="90dp">

        <EditText
            android:id="@+id/text_input_uSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_hint_username"
            android:inputType="text"
            android:layout_marginBottom="20dp"
            android:padding="16dp"/>

        <EditText
            android:id="@+id/text_input_pSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_hint_password"
            android:inputType="textPassword"
            android:layout_marginBottom="30dp"
            android:padding="16dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_signUp"
            android:text="@string/signup_register"
            android:onClick="signUp"/>

    </LinearLayout>

</LinearLayout>